--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "cheerio": "^0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "mongodb": "^2.2.21",
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta10",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
