--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "iconv-lite": "^0.4.15",
     "mongodb": "^2.2.21",
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta10",
